# kindle-notes-parser

./: .cz.toml  .gitignore  CHANGELOG.md  Cargo.toml  My Clippings.txt  README.md
.github/workflows/: release.yml  version_bump.yaml
kindle-notes-cli/: Cargo.toml
kindle-notes-cli/src/: main.rs
kindle-notes-core/: Cargo.toml
kindle-notes-core/src/: lib.rs
kindle-notes-gui/: Cargo.toml
kindle-notes-gui/src/: main.rs
