[package]
name = "kindle-notes-gui"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kindle-notes-core = { path = "../kindle-notes-core"}
druid = { git = "https://github.com/linebender/druid.git" }
dirs = "1.0.4"
